--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,10 @@
   "name": "tmdb-ember",
   "dependencies": {
     "ember": "~2.10.0",
-    "ember-cli-shims": "0.1.3"
+    "ember-cli-shims": "0.1.3",
+    "foundation-sites": "^6.2.4"
+  },
+  "devDependencies": {
+    "font-awesome": "^4.7.0"
   }
 }
