--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^2.0.1",
+    "ember-cli-moment-shim": "3.0.1",
     "ember-cli-pagination": "3.0.0-beta.2",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
@@ -39,8 +40,11 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
+    "ember-truth-helpers": "1.3.0",
     "ember-welcome-page": "^1.0.3",
-    "loader.js": "^4.0.10"
+    "emberfire": "2.0.6",
+    "loader.js": "^4.0.10",
+    "torii": "0.8.1"
   },
   "engines": {
     "node": ">= 0.12.0"
